validating-policy/check-deployment-namespace/policy.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: check-deployment-namespace
spec:
  matchConstraints:
    resourceRules:
    - apiGroups:   [apps]
      apiVersions: [v1]
      operations:  [CREATE, UPDATE]
      resources:   [deployments]
  variables:
    - name: allowed
      expression: >-
        resource.Get("v1", "configmaps", "default", "allowed-ns")
  validations:
    - expression: >-
        object.metadata.namespace in variables.allowed.data.list.split(",")
      messageExpression: >-
        "Deployment namespace is not in the allowed list [" + variables.allowed.data.list + "]"
